# NexQ-Sales-Copilot

./: AGENTS.md  Fix STT language.md  PROJECT_STATUS.md  README.md  devlog.md  package-lock.json  package.json
.planning/: plan-2026-06-12-search-opinion-transparency.md  session-2026-04-24.md  session-2026-04-27.md  session-2026-04-28.md
docs/: SILERO_MANUAL_VALIDATION.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  windows-test-manifest.xml
src-tauri/capabilities/: default.json
src-tauri/resources/silero-vad/v6.2.1/: MODEL.md
src-tauri/src/: capture_shutdown.rs  lib.rs  state.rs  windows_test_manifest_link.rs
src-tauri/src/audio/: mod.rs  recorder.rs
src-tauri/src/commands/: audio_commands.rs  gemini_cache_commands.rs  intelligence_commands.rs  meeting_commands.rs  mod.rs  stt_commands.rs  translation_commands.rs
src-tauri/src/context/: file_loader.rs  mod.rs  pdf_extractor.rs
src-tauri/src/intelligence/: action_config.rs  mod.rs  prompt_templates.rs
src-tauri/src/llm/: gemini.rs  gemini_cache.rs  mod.rs  openai_compat.rs  provider.rs  stream_parser.rs
src-tauri/src/rag/: embedder.rs
src-tauri/src/stt/: deepgram.rs  groq_response.rs  groq_whisper.rs  local_voice_gate.rs  mod.rs  provider.rs  silero_vad.rs  windows_native.rs
src-tauri/src/stt/fixtures/silero-vad/: README.md
src/components/: ActiveMeetingProvider.tsx  DevLogPanel.tsx
src/context/: ResourceCard.tsx
src/hooks/: useGlobalShortcut.ts  useSpeechRecognition.ts  useStreamBuffer.ts  useTranscript.ts  useTranscriptPersistence.ts
src/launcher/: LauncherView.tsx
src/launcher/meeting-details/: MeetingDetailsContainer.tsx
src/lib/: events.ts  ipc.ts  scenarios.ts  transcriptDiagnostics.ts  transcriptFinalization.ts  types.ts  windows.ts
src/overlay/: AIResponsePanel.tsx  OverlayView.tsx  QuestionDetector.tsx
src/settings/: AIActionsSettings.tsx  ContextStrategySettings.tsx  GeneralSettings.tsx  MeetingAudioSettings.tsx  STTSettings.tsx  TranslationSettings.tsx
src/stores/: aiActionsStore.ts  configStore.ts  meetingStore.ts  streamStore.ts  transcriptStore.ts
tests/: transcriptFinalization.test.ts
